spacing/sizing fixes

--- a/src/components/FileGallery/FileGallery.css
+++ b/src/components/FileGallery/FileGallery.css
@@ -9,7 +9,11 @@
   display: table;
 }
 
-.fileGalleryContainer > .openLabel {
+.fileGalleryContainer > .closePanel {
+  border-top: 0;
+}
+
+.openLabelContainer {
   cursor: pointer;
   display: inline-block;
   margin: 0;
